main.css
*{
    box-sizing: border-box;
}

#start{background-color: aquamarine; height: 20%;
    padding: bottom 1px;
    flex: content;
    background-image: url(images/buck&buck/buck&buck.png);
    background-repeat: no-repeat;
    background-position: right;
    background-size: contain;
}

pre{ 
    font-family: monospace;
    font-size: larger;
    margin: 0px; padding-left:3%; padding-top: 1.5%; padding-bottom: 2%;
    color:rgb(255, 104, 17); 
    font-style: normal;
    animation-duration: 3s;
    display: inline-block;
}

#buck{
    position: relative;
    height: 20%;
    padding-left: 55%;
    display: inline;
}

.tilt {
    -ms-transform: rotate(-15deg);
    -webkit-transform: rotate(-15deg);
    transform: rotate(-15deg);
}
#splash{
    
    position: relative;
    left: 42.5%;
    bottom: 45px;
    padding: 0;
    margin: 0;
    font-size: larger;
    color: rgb(99, 66, 187);
    text-shadow:0 0 3px #ebeb02;
}
.splashpop {
    animation: pop 0.58s infinite;
    -webkit-animation: pop 0.58s infinite;
}

@keyframes pop {
    from {
        transform:scale(0.99)
    }
    50% {
        transform:scale(1)
    }
    to {
        transform:scale(0.99)
    }
}
@-webkit-keyframes pop {
    from {
        -webkit-transform:scale(0.99)
    }
    50% {
        -webkit-transform:scale(1)
    }
    to {
        -webkit-transform:scale(0.99)
    }
}
@-moz-keyframes pop{
    from {
        -webkit-transform:scale(0.99)
    }
    50% {
        -webkit-transform:scale(1)
    }
    to {
        -webkit-transform:scale(0.99)
    }
}




table{
    border: none;
    margin-left: 5%; width: 630px; height: 260px; margin-top: 2%;}

td{ background-color: hsla(192, 100%, 71%, 0.445);
    height: auto; border-radius: 12px;}

p{padding-top: 1%; margin-top: 0; margin-bottom: 0;
font-family: monospace;
}

html{padding: 0; margin: 0;}

body{padding: 0; margin: 0; 
    
    background-image: url();
    background-repeat: no-repeat;
    background-position: center;    /*here put 2nd imageS*/
    background-position-x: right;
    backface-visibility: visible;

    padding-bottom: 0; 
    margin-bottom: 0;


}

div{margin: 0px; padding: 0em;}

footer{background-color: darkgrey; height: 120px; margin-bottom: 0;
    display: flow-root;
}











#mainbar{ 
    background-color:turquoise; 
    margin-left: 1%; margin-right: 1%; 
    margin-top: 1%; margin-bottom: 1%;
    border:solid; width: max-content; height: auto; 
    vertical-align: center;
}

#topproj{
    color: #4e4e08;
    font-size: x-large;
    padding: 1%;
    padding-bottom: 0.5%;
    margin: 0;
} 





#projects{
    background-color: rgba(255, 255, 255, 0);
    padding-bottom: 4%; margin-bottom: 0;
    padding-left: 1%;
    flex: content;
}

.projectsel{
    display: inline-block;
    background-color: #ffffff;
    border: solid black;
    height: 35vh;
    width: 21vw;
    margin: 1vw;
    margin-bottom: 0;
    margin-top: 1vh;
    
}
.projectsel:hover{
    box-shadow: 0 0 90px rgba(21, 150, 255, 0.6);

    animation: hoverbig 0.3s;
    animation: tilte 0.3s;
    animation-timing-function: ease-out;
    animation-direction: alternate;
    animation-fill-mode: forwards;
}
#projContent{
    background-color: #0019fc;

    padding-bottom: 5%;
}

#repoTitle{
    margin:0;
    
    padding-left: 5%;
    padding-top: 5%;
    font-family: monospace;
    font-size:x-large;
    font-weight: bold;
    display: inline-block;
}
.projDesc{
    margin: 0;
    
    padding-left: 3.5%;
    padding-top: 5%;
    padding-bottom: 5%;
    font-family: monospace;
    display: inline;
    text-decoration: none;

}
.projImg{
    margin: 0;
    padding: 0;
    
    height:55%;
    width:100% ;
    display: flow-root;
    vertical-align: bottom;
    
}


#moreproj{
    
    position: absolute;
    
}
#moreprojname{
    rotate: -90deg;
}





















#blog{background-color: rgba(255, 255, 255, 0);
    padding-bottom: 1%; margin-bottom: 1%; margin-top: 0;
    flex:content;
}

.blogel{
    display: inline-block;
    background-color: #16d646;
    border: solid black;
    height: 25vh;
    width: 18vw;
    margin: 3vw;
    margin-bottom: 0;
    margin-top: 1vh;
    border-radius: 5%;
}
.blogel:hover{
    box-shadow: 0 0 90px rgba(21, 150, 255, 0.6);

    animation: hoverbig 0.3s;
    animation-timing-function: ease-out;
    animation-direction: alternate;
    animation-fill-mode: forwards;
}

@keyframes hoverbig {
    from {
        transform:scale(1)
    }
    to {
        transform:scale(1.05)
       
    }
}
@-webkit-keyframes hoverbig {
    from {
        -webkit-transform:scale(1)
    }
    to {
        -webkit-transform:scale(1.05)
    }
}
@-moz-keyframes hoverbig{
    from {
        -webkit-transform:scale(1)
    }
    to {
        -webkit-transform:scale(1.05)
    }
}

@keyframes tilte {
    from {
        transform:rotate(0)
    }
    to {
        transform:rotate(5deg)
       
   }               /*  make it random */
}
@-webkit-keyframes tilte {
    from {
        -webkit-transform:rotate(0)
    }
    to {
        -webkit-transform:rotate(5deg)
    }
}
@-moz-keyframes tilte{
    from {
        -ms-transform:rotate(0) 
    to {
        -ms-transform:rotate(5deg)
    }
} 
}

#ominousbucket{ 
    
    align-content:center; vertical-align: middle;
    padding: 0;
    margin: 0;
    border: #161515 2px solid;
}


#seal{ float: right; vertical-align: bottom;
         position: relative;
         height:90px; width:90px;
         cursor: grab;
        }
#seal:hover{
    border-color: #2f00b1;
    box-shadow: 0 0 90px rgba(251, 255, 0, 0.6);
    
}




/* TODO fix this not showing up*/
#tooltiptext {
  border: #161515 solid 1px;
  font-family: monospace;
  background-color: rgb(248, 248, 248);
  color: #161515;
  display: inline;
  float: right; vertical-align: middle;
  position: absolute;

  text-align: center;
  visibility: visible; /* qua la visibilità dell'oggetto*/
  opacity: 1;
  transition: opacity 2s;
  width: 130px;
  padding: 5px 0;
  border-radius: 6px;
  
  z-index: 1;
  bottom: -57%;
  left: 83.5%;
}
#seal:hover #tooltiptext {
  visibility: visible;
  opacity: 1;
}

.gameAssets{
    display: none;

}

/*TODO fix all broken positioning on elements*/ 

